force-app/main/default/objects/Package__c/Package__c.object-meta.xml
<CustomObject>
    <description>Details of all package</description>
    <label>Package</label>
    <nameField>
        <label>Package Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Packages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>