force-app/main/default/objects/Package__c/fields/Package_Code_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Package_Code_Coverage__c</fullName>
    <description>Apex Code Coverage of a Unlocked Package</description>
    <label>Package Code Coverage</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>