force-app/main/default/objects/Package__c/fields/Package_Repository__c.field-meta.xml
<CustomField>
    <fullName>Package_Repo__c</fullName>
    <label>Package Repo</label>
    <type>Url</type>
</CustomField>