force-app/main/default/objects/Package__c/fields/Package_Type__c.field-meta.xml
<CustomField>
    <fullName>Package_Type__c</fullName>
    <label>Package Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Managed</fullName>
            </value>
            <value>
                <fullName>Unlocked</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>